jupyter notebook added

--- a/jupyter-notebook/exploratory-data-analysis.ipynb
+++ b/jupyter-notebook/exploratory-data-analysis.ipynb
@@ -11,14 +11,7 @@
     "### - xAPI-Educational Mining Dataset\n",
     "### Author: Ho Seok (Brandon) Oh\n",
     "\n",
-    "This dataset is downloaded from the [Kaggle](https://www.kaggle.com/) platform.\n",
-    "\n",
-    "#### Table of contents\n",
-    "1. Introduction\n",
-    "  - 1-1. Objective\n",
-    "  - 1-2. About Dataset\n",
-    "  - 1-3. Explore Dataset\n",
-    "2. Data Analysis\n"
+    "This dataset is downloaded from the [Kaggle](https://www.kaggle.com/) platform."
    ]
   },
   {
@@ -27,10 +20,8 @@
    "source": [
     "## 1. Introduction\n",
     "\n",
-    "### 1-1. Objective\n",
     "\n",
-    "\n",
-    "### 1-2. About Dataset\n",
+    "### 1-1. About Dataset\n",
     "\n",
     "#### Attributes\n",
     "\n",
@@ -124,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1-3. Explore Dataset"
+    "### 1-2. Explore Dataset"
    ]
   },
   {
@@ -1524,7 +1515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using Random Forest Classifier"
+    "### 3-2. Machine Learning using Random Forest Classifier"
    ]
   },
   {
@@ -1631,7 +1622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using XGBoost Classifier"
+    "### 3-2. Machine Learning using XGBoost Classifier"
    ]
   },
   {
