jupyter notebook added

--- a/jupyter-notebook/exploratory-data-analysis.ipynb
+++ b/jupyter-notebook/exploratory-data-analysis.ipynb
@@ -11,7 +11,20 @@
     "### - xAPI-Educational Mining Dataset\n",
     "### Author: Ho Seok (Brandon) Oh\n",
     "\n",
-    "This dataset is downloaded from the [Kaggle](https://www.kaggle.com/) platform."
+    "> This dataset is downloaded from the [Kaggle](https://www.kaggle.com/) platform.\n",
+    "\n",
+    "\n",
+    "#### Table of contents\n",
+    "1. Introduction\n",
+    "   - 1-1. About Dataset\n",
+    "   - 1-2. Explore Dataset\n",
+    "2. Data Analysis\n",
+    "   - 2-1. Categorical features\n",
+    "   - 2-2. Numerical features\n",
+    "3. Prediction\n",
+    "   - 3-1. Preprocessing Dataset\n",
+    "   - 3-2. Machine Learning using Random Forest Classifier\n",
+    "   - 3-3. Machine Learning using XGBoost Classifier"
    ]
   },
   {
@@ -1622,7 +1635,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3-2. Machine Learning using XGBoost Classifier"
+    "### 3-3. Machine Learning using XGBoost Classifier"
    ]
   },
   {
